# SpikeInference

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  Makevars  NAMESPACE  README.md  _pkgdown.yml  index.md
R/: RcppExports.R  SpikeInference.R  class_utils.R  example_use.R  safe_pvals.R  simulate_ar1.R  spike_estimates.R  spike_inference.R  utils.R
R/tutorial/: example_use.R
docs/: 404.html  authors.html  index.html  pkgdown.yml
docs/articles/: Tutorials.html  index.html  my-vignette.html  real_data_example.html  technical_details.html
docs/reference/: SpikeInference.html  construct_v.html  estimate_spike_by_firing_rate.html  estimate_spike_by_spike_number.html  eval_cost_at.SpikeInference.html  index.html  plot.SpikeInference.html  plot.estimated_spikes.html  plot.simdata.html  (+11 more)
inst/: CITATION
man/: SpikeInference.Rd  construct_v.Rd  estimate_spike_by_firing_rate.Rd  estimate_spike_by_spike_number.Rd  eval_cost_at.SpikeInference.Rd  plot.SpikeInference.Rd  plot.simdata.Rd  plot.spike_estimates.Rd  plot.spike_inference.Rd  print.simdata.Rd  print.spike_estimates.Rd  print.spike_inference.Rd  simulate_ar1.Rd  spike_estimates.Rd  spike_inference.Rd  summary.spike_estimates.Rd  summary.spike_inference.Rd
src/: CMakeLists.txt  Makevars  RcppExports.cpp  fpop.cpp  fpop.h  fpop_inference.cpp  fpop_inference.h  funPieceList.cpp  funPieceList.h  main.cpp  rcpp_fpop.cpp  selective_inference.cpp  selective_inference.h  test_utils.h  utils.cpp
tests/: testthat.R
vignettes/: Tutorials.Rmd  my-vignette.Rmd  real_data_example.Rmd  technical_details.Rmd
(+3 files in other folders)
